<resources>
    <string name="app_name">随身记</string>

    <!-- 文本标签 -->
    <string name="note_title_label">标题：</string>
    <string name="note_content_label">正文内容：</string>
    <string name="note_favorited_label">加入收藏</string>

    <!-- hint 相关 -->
    <string name="note_title_hint">请在此处输入记录的标题</string>
    <string name="note_content_hint">请在此处输入记录的正文内容</string>

    <!-- alert 相关-->
    <string name="date_picker_title">创建日期：</string>

    <!-- menu 相关 -->
    <string name="new_note">新笔记</string>
    <string name="show_subtitle">显示标题</string>
    <string name="hide_subtitle">隐藏标题</string>
    <string name="subtitle_format">%1$s 条日记</string>
    <string name="delete_note">删除</string>

</resources>


